--- a/styles/sass/components/_hamburger.scss
+++ b/styles/sass/components/_hamburger.scss
@@ -3,14 +3,14 @@
     display: none;
     z-index: 50;
     @media (max-width: var.$tablet)  {
-        width: 30px;
-        height: 22px;
+        width: 24px;
+        height: 18px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        // position: absolute;
-        top: 30px;
-        right: 33px;
+        position: absolute;
+        top: 13px;
+        right: 13px;
         cursor: pointer;
         user-select: none;
         -webkit-transition: all 0.3s ease-in-out;
@@ -26,7 +26,7 @@
 
     &__line:nth-child(1),
     &__line:nth-child(2) {
-        margin-bottom: 7px;
+        margin-bottom: 5px;
     }
 
 
