--- a/styles/sass/components/_switch_lang.scss
+++ b/styles/sass/components/_switch_lang.scss
@@ -6,13 +6,13 @@
   width: 70px;
   height: 50px;
 
+  @media (max-width: var.$tablet) {
+    height: 40px;
+}
+
   &--header {
     @media (max-width: var.$tablet) {
       display: none;
-    }
-    .ru,
-    .en {
-      border-bottom: 2px solid transparent;
     }
   }
 
@@ -31,10 +31,8 @@
   padding: 0;
   background-color: transparent;
   border: 0;
-  transition: 0.5s;
-  border-bottom: 2px solid transparent;
   cursor: pointer;
   &.active {
-    border-bottom: 2px solid var(--primary-gold);
+    border-bottom: 3px solid var(--primary-gold);
   }
 }
