--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -13,12 +13,12 @@
     &__container {
         margin: 0 auto;
         max-width: var(--max-width);
-        height: 80px;
+        height: 65px;
         display: flex;
         justify-content: space-around;
         align-items: center;
         @media (max-width: var.$tablet) {
-            height: 30px;
+            height: 40px;
         }
     }
 
