--- a/styles/sass/layout/_start-screen.scss
+++ b/styles/sass/layout/_start-screen.scss
@@ -24,11 +24,11 @@
     &__container {
         background: rgba(0, 0, 0, 0.1);
         position: absolute;
+        z-index: 0;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 5;
         display: flex;
     }
 
